20050102 libspectrum.{c,h.in},sna.c,szx.c,timings.c,z80.c: TS2068 support
	 (patch #1080531) (Fred).
20050108 libspectrum.c: Declare libspectrum_default_error_function before
         referring to it (Fred).
20050108 timings.c: fix Pentagon and Scorpion CPU speeds to give them 50Hz
	 frame rates (rest of patch #1080531) (Fred).
20050113 libspectrum.c: Set NTSC capability for the TS2068 (Fred).
20050115 szx.c,zxs.c: fix compilation when zlib not present (closes bug
	 #1098337).
20050125 libspectrum.h.in: Warn about use of deprecated interfaces with GCC
	 (Fred).
20050204 szx.c,rzx.c: More compilation fixes when zlib not present (Fred).
20050204 libspectrum.h.in: More Win32 compilation fixes (Fred).
20050204 configure.in,Makefile.am: More Win32 compilation fixes (Fred).
20050204 configure.in,Makefile.am: Mark libspectrum.h as a nodist file instead
	 of deleting it when configure is run, remember to make distribution
	 tarballs with 'make dist-gzip' (Fred).
20050213 szx.c: make uncompressed snaps with DOCK data work (and don't waste
	 memory when loading compressed snaps with DOCK data).
20050213 szx.c: don't bom if we try and write out a page which doesn't
	 exist in the snapshot.
20050218 ide.c: add libspectrum_ide_dirty function.
20050227 make-perl.c,libspectrum.h.in: advertise that we support zlib
         compressed files (Fred).
20050302 Makefile.am: Stop automake trying to build make-perl (Fred).
20050302 make-perl.c,myglib/ghash.c: Add g_hash_table_size to the glib
         replacement code (Fred).
20050305 libspectrum.h.in,timings.c: add interrupt length to timings
	 information.
20050325 tzx_read.c: avoid implementation-defined behaviour if a block
	 has no data bytes.
20050325 tape_block.c: avoid undefined behaviour if a ROM block has no
	 data bytes.
20050402 microdrive.c: don't check bad blocks when checksumming (part of
	 patch #1161364) (Gergely Szasz).
20050409 libspectrum.h.in,tape.c: add libspectrum_tape_{insert,remove}_block
	 routines.